# graph_elliptic_bitcoin

./: .gitignore  BlackPanther_Building_Datasets V0.3.ipynb  Boosted_unsplashed-multisegment.ipynb  Boosted_unsplashed.ipynb  Graph_NN_unsplashed.ipynb  NN_unsplashed.ipynb  TFT_unsplashed.ipynb  data_exploration_feature_eng.ipynb  modelling.ipynb  pyproject.toml
prod/: engine_utils.py  nn_data_prep_prod.py  nn_execution_functions_prod.py  nn_loss_function_prod.py  nn_models_prod.py  nn_utils.py  retention_nn.py  us_data_prep.py  us_execution.py  us_loss.py  us_model.py
