[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["tlc91 <thomas.curran@mistplay.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
seaborn = "^0.11.2"
torch = "1.11"
jupyterlab = "^3.4.3"
networkx = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"